test/parallel/taskPar/taskIntents/undefinedOuterVar-begin.good
undefinedOuterVar-begin.chpl:4: error: could not find the outer variable for 'undefinedVar'
